Updated jnlp hostname to use dynamic cjb.net hostname. Added javadoc userexternalfile flag because javadoc command line was getting too big.

--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -104,30 +104,13 @@ maven.compile.fork=true
 maven.compile.failonerror=true
 
 # ------------------------------------------------------------------------
-#  M U L T I P R O J E C T
-# ------------------------------------------------------------------------
-
-# Exclude statment that results in the build of all PWSW modules. This is
-# the normal setting for the continuous integration build and the
-# deployment build. Make sure to *COMMENT OUT* maven.multiproject.includes
-maven.multiproject.excludes=project.xml,**/build/**
-
-# Use this to single out projects individual projects to be built. Handy
-# for debugging and experimenting with Maven without the baggage of the
-# entire build. Make sure to *COMMENT OUT* maven.multiproject.excludes
-#maven.multiproject.includes=**/uiframework/project.xml,**/email/project.xml
-
-# Ignores failures and continues the build regardless. This should be
-# set to true for the continuous integration build and false for the
-# deployment build.
-maven.multiproject.ignoreFailures=true
-
-# ------------------------------------------------------------------------
 # J A V A D O C
 # ------------------------------------------------------------------------
 
 # Instructs javadoc report to include non-public docs also
 maven.javadoc.private=true
+maven.javadoc.maxmemory=512m
+maven.javadoc.useexternalfile=yes
 
 # ------------------------------------------------------------------------
 # T A S K L I S T
@@ -154,12 +137,12 @@ maven.jnlp.signjar.dname.c=US
 
 maven.jnlp.dir=${maven.build.dir}/jnlp
 maven.jnlp.spec=1.0+
-maven.jnlp.http.codebase=http://12.239.81.65:8080/
+maven.jnlp.http.codebase=http://hemisfear.cjb.net:8080/
 maven.jnlp.title=${pom.name}
 maven.jnlp.vendor=:-)
-maven.jnlp.homepage=http://12.239.81.65:8080/index.html
-maven.jnlp.icon=http://12.239.81.65:8080/toolbox.jpg
-maven.jnlp.icon.splash=http://12.239.81.65:8080/toolbox.jpg
+maven.jnlp.homepage=http://hemisfear.cjb.net:8080/index.html
+maven.jnlp.icon=http://hemisfear.cjb.net:8080/toolbox.jpg
+maven.jnlp.icon.splash=http://hemisfear.cjb.net:8080/toolbox.jpg
 maven.jnlp.description=${pom.description}
 maven.jnlp.description.one-line=Java Developers Toolbox
 maven.jnlp.description.short=${pom.shortDescription}
@@ -176,15 +159,16 @@ maven.jnlp.iscomponent=false
 maven.jnlp.mainclass=toolbox.workspace.PluginWorkspace
 #maven.jnlp.mainclass.arguments 	Yes 	The argument list for the main class. All arguments are separated by a space.
 
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-#     xdocs
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-
+# ------------------------------------------------------------------------
+# X D O C S
+# ------------------------------------------------------------------------
 maven.ui.banner.background = white
 maven.ui.section.background = #BBBBBB
 maven.ui.subsection.background = #DDDDDD
 maven.ui.section.foreground = #990000
 maven.ui.subsection.foreground = #990000
 
-
+# ------------------------------------------------------------------------
+# U B E R J A R
+# ------------------------------------------------------------------------
 maven.uberjar.main=toolbox.workspace.PluginWorkspace
