Added toolbox.jnlp.deploy directory

--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -1,4 +1,9 @@
 # ------------------------------------------------------------------------
+# T O O L B O X
+# ------------------------------------------------------------------------
+toolbox.jnlp.deploy=k:/winapps/win2k/Tomcat41/webapps/ROOT/
+
+# ------------------------------------------------------------------------
 # M A V E N  J A R  O V E R R I D E
 # ------------------------------------------------------------------------
 
@@ -151,13 +156,11 @@ maven.jnlp.offline.allowed=true
 maven.jnlp.permission=all
 maven.jnlp.j2se.version=1.4
 maven.jnlp.j2se.heapsize.initial=32m
-maven.jnlp.j2se.heapsize.max=256m
+maven.jnlp.j2se.heapsize.max=512m
 maven.jnlp.isapplet=false
-#maven.jnlp.applet.name 	Yes 	The applet name.
 maven.jnlp.isinstaller=false
 maven.jnlp.iscomponent=false
 maven.jnlp.mainclass=toolbox.workspace.PluginWorkspace
-#maven.jnlp.mainclass.arguments 	Yes 	The argument list for the main class. All arguments are separated by a space.
 
 # ------------------------------------------------------------------------
 # X D O C S
