Added tonic and liquid look and feel to maven jars.

--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -44,6 +44,7 @@ maven.jar.jode=${basedir}/lib/jode.jar
 maven.jar.jreversepro=${basedir}/lib/jreversepro.jar
 maven.jar.junit=${basedir}/lib/junit.jar
 maven.jar.kunststoff=${basedir}/lib/kunststoff.jar
+maven.jar.liquidlf=${basedir}/lib/liquidlf.jar
 maven.jar.log4j=${basedir}/lib/log4j.jar
 maven.jar.metouia=${basedir}/lib/metouia.jar
 maven.jar.multivalent=${basedir}/lib/multivalent.jar
@@ -54,6 +55,7 @@ maven.jar.sametime-comm=${basedir}/lib/sametime-comm.jar
 maven.jar.sametime-comm-res=${basedir}/lib/sametime-comm-res.jar
 maven.jar.skinlf=${basedir}/lib/skinlf.jar
 maven.jar.tinylaf=${basedir}/lib/tinylaf.jar
+maven.jar.toniclf=${basedir}/lib/toniclf.jar
 maven.jar.xercesImpl=${basedir}/lib/xercesImpl.jar
 maven.jar.xep=${basedir}/lib/xep.jar
 maven.jar.xml-apis=${basedir}/lib/xml-apis.jar
