--- a/trunk/toolbox/.classpath
+++ b/trunk/toolbox/.classpath
@@ -44,11 +44,13 @@
 	<classpathentry kind="lib" path="lib/sametime-comm.jar"/>
 	<classpathentry kind="lib" path="lib/sametime-comm-res.jar"/>
 	<classpathentry sourcepath="lib/src/skinlf-src.zip" kind="lib" path="lib/skinlf.jar"/>
-	<classpathentry kind="var" path="TOOLBOX_RESOURCES"/>
 	<classpathentry sourcepath="lib/src/multivalent-src.zip" kind="lib" path="lib/multivalent.jar"/>
 	<classpathentry kind="lib" path="lib/jreversepro.jar"/>
 	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
 	<classpathentry kind="lib" path="lib/toniclf.jar"/>
 	<classpathentry kind="lib" path="lib/liquidlf.jar"/>
+	<classpathentry kind="lib" path="resources"/>
+	<classpathentry kind="lib" path="lib/javassist.jar"/>
+	<classpathentry sourcepath="lib/src/junit-addons-src.zip" kind="lib" path="lib/junit-addons.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
