--- a/trunk/toolbox/build.properties
+++ b/trunk/toolbox/build.properties
@@ -21,6 +21,7 @@ maven.jar.apple-mrj=${basedir}/lib/apple-mrj.jar
 maven.jar.avalon-framework=${basedir}/lib/avalon-framework.jar
 maven.jar.batik=${basedir}/lib/batik.jar
 maven.jar.bsh=${basedir}/lib/bsh.jar
+maven.jar.calphahtml=${basedir}/lib/calphahtml.jar
 maven.jar.commons-cli=${basedir}/lib/commons-cli.jar
 maven.jar.commons-lang=${basedir}/lib/commons-lang.jar
 maven.jar.commons-beanutils=${basedir}/lib/commons-beanutils.jar
@@ -39,16 +40,20 @@ maven.jar.hamsam=${basedir}/lib/hamsam.jar
 maven.jar.hsqldb=${basedir}/lib/hsqldb.jar
 maven.jar.jaimlib=${basedir}/lib/jaimlib.jar
 maven.jar.jakarta-regexp=${basedir}/lib/jakarta-regexp.jar
+maven.jar.javassist=${basedir}/lib/javassist.jar
+maven.jar.jaxen=${basedir}/lib/jaxen.jar
 maven.jar.jedit-syntax=${basedir}/lib/jedit-syntax.jar
 maven.jar.jode=${basedir}/lib/jode.jar
 maven.jar.jreversepro=${basedir}/lib/jreversepro.jar
 maven.jar.junit=${basedir}/lib/junit.jar
+maven.jar.junit-addons=${basedir}/lib/junit-addons.jar
 maven.jar.kunststoff=${basedir}/lib/kunststoff.jar
 maven.jar.liquidlf=${basedir}/lib/liquidlf.jar
 maven.jar.log4j=${basedir}/lib/log4j.jar
 maven.jar.metouia=${basedir}/lib/metouia.jar
 maven.jar.multivalent=${basedir}/lib/multivalent.jar
 maven.jar.plastic=${basedir}/lib/plastic.jar
+maven.jar.pollo=${basedir}/lib/pollo.jar
 maven.jar.saxon=${basedir}/lib/saxon.jar
 maven.jar.statcvs=${basedir}/lib/statcvs.jar
 maven.jar.sametime-comm=${basedir}/lib/sametime-comm.jar
@@ -62,8 +67,6 @@ maven.jar.xml-apis=${basedir}/lib/xml-apis.jar
 maven.jar.xom=${basedir}/lib/xom.jar
 maven.jar.xplookandfeel=${basedir}/lib/xplookandfeel.jar
 maven.jar.xt=${basedir}/lib/xt.jar
-
-
 
 # ------------------------------------------------------------------------
 # T E S T
