Added jar for hippo l&f.  Fixed jnlp icon.

--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -37,6 +37,7 @@ maven.jar.db2java=${basedir}/lib/db2java.jar
 maven.jar.debug=${basedir}/lib/debug.jar
 maven.jar.fop=${basedir}/lib/fop.jar
 maven.jar.hamsam=${basedir}/lib/hamsam.jar
+maven.jar.hippolf=${basedir}/lib/hippolf.jar
 maven.jar.hsqldb=${basedir}/lib/hsqldb.jar
 maven.jar.jaimlib=${basedir}/lib/jaimlib.jar
 maven.jar.jakarta-regexp=${basedir}/lib/jakarta-regexp.jar
@@ -151,8 +152,8 @@ maven.jnlp.http.codebase=http://hemisfear.cjb.net:8080/
 maven.jnlp.title=${pom.name}
 maven.jnlp.vendor=:-)
 maven.jnlp.homepage=http://hemisfear.cjb.net:8080/index.html
-maven.jnlp.icon=http://hemisfear.cjb.net:8080/toolbox.jpg
-maven.jnlp.icon.splash=http://hemisfear.cjb.net:8080/toolbox.jpg
+maven.jnlp.icon=http://hemisfear.cjb.net:8080/toolbox.gif
+maven.jnlp.icon.splash=http://hemisfear.cjb.net:8080/toolbox.gif
 maven.jnlp.description=${pom.description}
 maven.jnlp.description.one-line=Java Developers Toolbox
 maven.jnlp.description.short=${pom.shortDescription}
