Added new jars to support the doc viewer plugin. Added jars for alloy, hippo. and looks look and feels.

--- a/toolbox/build.xml
+++ b/toolbox/build.xml
@@ -190,6 +190,13 @@
                 <include name="jedit-syntax.jar"/>
                 <include name="multivalent.jar"/>
                 
+                <!-- Doc viewer plugin -->
+                <include name="webwindow.jar"/>
+                <include name="calphahtml.jar"/>
+                <include name="jaxen.jar"/>
+                <include name="pollo.jar"/>
+                <include name="javassist.jar"/>
+                
                 <!-- ===== Apache Commons ===== -->
                 <include name="commons-cli.jar"/>
                 <include name="commons-lang.jar"/>
@@ -254,7 +261,7 @@
             <fileset dir="${lib}">
             
                 <!-- ===== Look and Feels ==== -->                    
-                <include name="plastic.jar"/>
+                <include name="looks.jar"/>
                 <include name="kunststoff.jar"/>
                 <include name="xplookandfeel.jar"/>
                 <include name="metouia.jar"/>
@@ -262,6 +269,8 @@
                 <include name="skinlf.jar"/>
                 <include name="toniclf.jar"/>
                 <include name="liquidlf.jar"/>
+                <include name="hippolf.jar"/>
+                <include name="alloy.jar"/>
                 
             </fileset>
         </unjar>    
@@ -453,7 +462,7 @@
             
             <link href="http://www.junit.org/junit/javadoc/3.8.1/index.htm"/>
             <link href="http://jakarta.apache.org/log4j/docs/api"/>
-            <link href="http://java.sun.com/j2se/1.4.1/docs/api"/>
+            <link href="http://java.sun.com/j2se/1.4.2/docs/api"/>
             <link href="http://jakarta.apache.org/commons/beanutils/api"/>
             <link href="http://jakarta.apache.org/commons/logging/api"/>
             <link href="http://jakarta.apache.org/commons/collections/api"/>
