--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -16,10 +16,12 @@ toolbox.jnlp.deploy=k:/winapps/win2k/Tomcat41/webapps/ROOT/
 maven.jar.override=on
 
 maven.jar.acrobat=${basedir}/lib/acrobat.jar
+maven.jar.alloy=${basedir}/lib/alloy.jar
 maven.jar.ant=${basedir}/lib/ant.jar
 maven.jar.apple-mrj=${basedir}/lib/apple-mrj.jar
 maven.jar.avalon-framework=${basedir}/lib/avalon-framework.jar
 maven.jar.batik=${basedir}/lib/batik.jar
+maven.jar.bsf=${basedir}/lib/bsf.jar
 maven.jar.bsh=${basedir}/lib/bsh.jar
 maven.jar.calphahtml=${basedir}/lib/calphahtml.jar
 maven.jar.commons-cli=${basedir}/lib/commons-cli.jar
@@ -51,9 +53,9 @@ maven.jar.junit-addons=${basedir}/lib/junit-addons.jar
 maven.jar.kunststoff=${basedir}/lib/kunststoff.jar
 maven.jar.liquidlf=${basedir}/lib/liquidlf.jar
 maven.jar.log4j=${basedir}/lib/log4j.jar
+maven.jar.looks=${basedir}/lib/looks.jar
 maven.jar.metouia=${basedir}/lib/metouia.jar
 maven.jar.multivalent=${basedir}/lib/multivalent.jar
-maven.jar.plastic=${basedir}/lib/plastic.jar
 maven.jar.pollo=${basedir}/lib/pollo.jar
 maven.jar.saxon=${basedir}/lib/saxon.jar
 maven.jar.statcvs=${basedir}/lib/statcvs.jar
@@ -62,6 +64,7 @@ maven.jar.sametime-comm-res=${basedir}/lib/sametime-comm-res.jar
 maven.jar.skinlf=${basedir}/lib/skinlf.jar
 maven.jar.tinylaf=${basedir}/lib/tinylaf.jar
 maven.jar.toniclf=${basedir}/lib/toniclf.jar
+maven.jar.webwindow=${basedir}/lib/webwindow.jar
 maven.jar.xercesImpl=${basedir}/lib/xercesImpl.jar
 maven.jar.xep=${basedir}/lib/xep.jar
 maven.jar.xml-apis=${basedir}/lib/xml-apis.jar
