Added section for clover

--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -79,19 +79,19 @@ maven.jar.xt=${basedir}/lib/xt.jar
 # Forces each unit test to be run in its own process. This is turned on
 # because of some sort of Xerces conflict that surfaced when the tests
 # were all run in the same JVM.
-maven.junit.fork=yes
+maven.junit.fork=no
 
 # Sends JUnit output to the console instead of a file
 maven.junit.usefile=true
 
 # Keeps from stopping the build if a JUnit test fails
-maven.test.failure.ignore=true
+maven.test.failure.ignore=false
 
 # As part of the normal build process, Maven insists on running the JUnit
 # tests when attaining the jar:install goal. Use this property to skips
 # over junit tests when not necessary. This must be set to false when
 # building the continuous integration build or the deployment build.
-maven.test.skip=true
+maven.test.skip=false
 
 # JUnit command line arguments when fork is set to true
 #maven.junit.jvmargs=-Xbootclasspath/a:${basedir}/classes
@@ -132,7 +132,7 @@ maven.javadoc.useexternalfile=yes
 
 # Defines the text string in java source code that denotes TODO tasks
 # for the Maven TaskList report
-#maven.tasklist.taskTag=TODO:
+maven.tasklist.taskTag = TODO
 
 # ------------------------------------------------------------------------
 # J N L P
@@ -184,3 +184,24 @@ maven.ui.subsection.foreground = #990000
 # U B E R J A R
 # ------------------------------------------------------------------------
 maven.uberjar.main=toolbox.workspace.PluginWorkspace
+
+# ------------------------------------------------------------------------
+# C L O V E R
+# ------------------------------------------------------------------------
+
+# Alpha -- Alpabetical
+# PcCoveredAsc -- Percent total coverage, ascending
+# PcCoveredDesc -- Percent total coverage, descending
+# ElementsCoveredAsc -- Total elements covered, ascending
+# ElementsCoveredDesc -- Total elements covered, descending
+maven.clover.orderBy=PcCoveredDesc
+
+# Decides whether to instrument test classes
+maven.clover.instrument.tests=false
+
+# Allows the user to override the Clover jar
+maven.clover.jar=${basedir}/build/lib/clover.jar
+
+
+
+
