Added changelog report and developer-activity report sections.

--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -3,6 +3,7 @@
 # ------------------------------------------------------------------------
 toolbox.jnlp.deploy=k:/winapps/win2k/Tomcat41/webapps/ROOT/
 
+
 # ------------------------------------------------------------------------
 # M A V E N  J A R  O V E R R I D E
 # ------------------------------------------------------------------------
@@ -72,6 +73,7 @@ maven.jar.xom=${basedir}/lib/xom.jar
 maven.jar.xplookandfeel=${basedir}/lib/xplookandfeel.jar
 maven.jar.xt=${basedir}/lib/xt.jar
 
+
 # ------------------------------------------------------------------------
 # T E S T
 # ------------------------------------------------------------------------
@@ -97,6 +99,7 @@ maven.test.skip=false
 #maven.junit.jvmargs=-Xbootclasspath/a:${basedir}/classes
 #-Dlog4j.debug=true -Dlog4j.configuration=file:/c:/workspaces/workspace-head/build/conf/log4j.xml
 
+
 # ------------------------------------------------------------------------
 #  C O M P I L E
 # ------------------------------------------------------------------------
@@ -117,6 +120,7 @@ maven.compile.fork=true
 # for the continuous integration and deployment builds.
 maven.compile.failonerror=true
 
+
 # ------------------------------------------------------------------------
 # J A V A D O C
 # ------------------------------------------------------------------------
@@ -126,6 +130,7 @@ maven.javadoc.private=true
 maven.javadoc.maxmemory=512m
 maven.javadoc.useexternalfile=yes
 
+
 # ------------------------------------------------------------------------
 # T A S K L I S T
 # ------------------------------------------------------------------------
@@ -133,6 +138,7 @@ maven.javadoc.useexternalfile=yes
 # Defines the text string in java source code that denotes TODO tasks
 # for the Maven TaskList report
 maven.tasklist.taskTag = TODO
+
 
 # ------------------------------------------------------------------------
 # J N L P
@@ -171,6 +177,7 @@ maven.jnlp.isinstaller=false
 maven.jnlp.iscomponent=false
 maven.jnlp.mainclass=toolbox.workspace.PluginWorkspace
 
+
 # ------------------------------------------------------------------------
 # X D O C S
 # ------------------------------------------------------------------------
@@ -180,10 +187,12 @@ maven.ui.subsection.background = #DDDDDD
 maven.ui.section.foreground = #990000
 maven.ui.subsection.foreground = #990000
 
+
 # ------------------------------------------------------------------------
 # U B E R J A R
 # ------------------------------------------------------------------------
 maven.uberjar.main=toolbox.workspace.PluginWorkspace
+
 
 # ------------------------------------------------------------------------
 # C L O V E R
@@ -203,5 +212,18 @@ maven.clover.instrument.tests=false
 maven.clover.jar=${basedir}/build/lib/clover.jar
 
 
+# ------------------------------------------------------------------------
+# C H A N G E L O G
+# ------------------------------------------------------------------------
 
+# Range of days to generate changelog for
+maven.changelog.range=90
+
+
+# ------------------------------------------------------------------------
+# D E V E L O P E R - A C T I V I T Y
+# ------------------------------------------------------------------------
+
+# Range of days to generate developer activity for
+maven.activitylog.range=90
 
