--- a/trunk/toolbox/build.properties
+++ b/trunk/toolbox/build.properties
@@ -227,3 +227,12 @@ maven.changelog.range=90
 # Range of days to generate developer activity for
 maven.activitylog.range=90
 
+
+# ------------------------------------------------------------------------
+# C H E C K S T Y L E 
+# ------------------------------------------------------------------------
+
+# Specifies the location of the License file.
+# TODO: Fixme to point to license.txt
+maven.checkstyle.header.file=${basedir}/build/conf/checkstyle.properties
+maven.checkstyle.properties=${basedir}/build/conf/checkstyle_checks.xml
