--- a/toolbox/build.properties
+++ b/toolbox/build.properties
@@ -49,6 +49,7 @@ maven.jar.jaxen=${basedir}/lib/jaxen.jar
 maven.jar.jedit-syntax=${basedir}/lib/jedit-syntax.jar
 maven.jar.jode=${basedir}/lib/jode.jar
 maven.jar.jreversepro=${basedir}/lib/jreversepro.jar
+maven.jar.jtidy=${basedir}/lib/jtidy.jar
 maven.jar.junit=${basedir}/lib/junit.jar
 maven.jar.junit-addons=${basedir}/lib/junit-addons.jar
 maven.jar.kunststoff=${basedir}/lib/kunststoff.jar
